Use chunked uploads instead of single upload (#68)
* Change to chunked uploads

* Renamed SHA256 attribute to SHA1

* Breaking: removed /upload endpoint

* Changed timeout to 15 minutes for reading

* Change session key only after 12 hours

* Added API calls for chunk upload, refactoring, added tests

* Add content-type based on file extension for images if empty
