# internal/webserver/fileupload/FileUpload.go
@@ -3,9 +3,9 @@ package fileupload
 import (
 	"github.com/forceu/gokapi/internal/configuration"
 	"github.com/forceu/gokapi/internal/configuration/database"
-	"github.com/forceu/gokapi/internal/helper"
 	"github.com/forceu/gokapi/internal/models"
 	"github.com/forceu/gokapi/internal/storage"
+	"github.com/forceu/gokapi/internal/storage/chunking"
 	"io"
 	"net/http"
 	"strconv"
@@ -18,26 +18,64 @@ func Process(w http.ResponseWriter, r *http.Request, isWeb bool, maxMemory int) 
 	if err != nil {
 		return err
 	}
-	var config models.UploadRequest
-	if isWeb {
-		config = parseConfig(r.Form, true)
-	} else {
-		config = parseConfig(r.Form, false)
-	}
+	defer r.MultipartForm.RemoveAll()
+	config := parseConfig(r.Form, isWeb)
 	file, header, err := r.FormFile("file")
 	if err != nil {
 		return err
 	}
 
 	result, err := storage.NewFile(file, header, config)
+	defer file.Close()
 	if err != nil {
 		return err
 	}
+	_, _ = io.WriteString(w, result.ToJsonResult(config.ExternalUrl))
+	return nil
+}
+
+// ProcessNewChunk processes a file chunk upload request
+func ProcessNewChunk(w http.ResponseWriter, r *http.Request, isApiCall bool) error {
+	err := r.ParseMultipartForm(int64(configuration.Get().MaxMemory) * 1024 * 1024)
+	if err != nil {
+		return err
+	}
+	defer r.MultipartForm.RemoveAll()
+	chunkInfo, err := chunking.ParseChunkInfo(r, isApiCall)
+	if err != nil {
+		return err
+	}
+	file, header, err := r.FormFile("file")
+	if err != nil {
+		return err
+	}
+
+	err = chunking.NewChunk(file, header, chunkInfo)
 	defer file.Close()
-	_, err = io.WriteString(w, result.ToJsonResult(config.ExternalUrl))
-	helper.Check(err)
-	err = r.MultipartForm.RemoveAll()
-	helper.Check(err)
+	if err != nil {
+		return err
+	}
+	_, _ = io.WriteString(w, "{\"result\":\"OK\"}")
+	return nil
+}
+
+func CompleteChunk(w http.ResponseWriter, r *http.Request, isApiCall bool) error {
+	err := r.ParseForm()
+	if err != nil {
+		return err
+	}
+	chunkId := r.Form.Get("chunkid")
+	config := parseConfig(r.Form, !isApiCall)
+	header, err := chunking.ParseFileHeader(r)
+	if err != nil {
+		return err
+	}
+
+	result, err := storage.NewFileFromChunk(chunkId, header, config)
+	if err != nil {
+		return err
+	}
+	_, _ = io.WriteString(w, result.ToJsonResult(config.ExternalUrl))
 	return nil
 }
 
@@ -84,7 +122,6 @@ func parseConfig(values formOrHeader, setNewDefaults bool) models.UploadRequest 
 		Password:          password,
 		ExternalUrl:       settings.ServerUrl,
 		MaxMemory:         settings.MaxMemory,
-		DataDir:           settings.DataDir,
 		UnlimitedTime:     unlimitedTime,
 		UnlimitedDownload: unlimitedDownload,
 	}
